<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="3dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="3dp"
            android:background="@color/cardview_dark_background">
            <TextView android:layout_width="100dp"
                android:layout_height="40dp"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:text="@string/BMI_Calculator_BmiTitle">
            </TextView>
        </RelativeLayout>

        <!--plec -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp">

            <TextView android:layout_width="100dp"
                android:layout_height="40dp"
                android:textSize="20dp"
                android:gravity="center"
                android:text="@string/BMI_Calculator_Gender">
            </TextView>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/bmi_radioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton android:id="@+id/bmi_radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BMI_Calculator_MaleRadioBox"/>

                <RadioButton android:id="@+id/bmi_radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BMI_Calculator_FemaleRadioBox"/>
            </RadioGroup>
        </LinearLayout>

    <!--waga-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp">

        <TextView android:layout_width="120dp"
                  android:layout_height="40dp"
                  android:textSize="20dp"
                  android:gravity="center"
                  android:text="@string/Bmi_Calculator_WeightLabel">
        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:digits="0123456789."
            android:inputType="number"
            android:id="@+id/Bmi_WeightText">
        </EditText>
    </LinearLayout>

        <!--wzrost-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp">
            <TextView android:layout_width="120dp"
                android:layout_height="40dp"
                android:textSize="20dp"

                android:gravity="center"
                android:text="@string/Bmi_Calculator_HeightLabel">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:digits="0123456789."
                android:inputType="number"
                android:id="@+id/Bmi_HeightText">
            </EditText>
        </LinearLayout>


       <Button android:layout_width="match_parent"
               android:layout_height="40dp"
               android:text="@string/BMI_Calculator_CalculateButtonText"
               android:id="@+id/Bmi_CalculateButton">
       </Button>

    </LinearLayout>
</LinearLayout>